--- a/.github/workflows/update-cask.yaml
+++ b/.github/workflows/update-cask.yaml
@@ -15,6 +15,9 @@ on:
 jobs:
   update-cask:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
 
