Improve cask file validation

--- a/.github/workflows/validate-cask.yaml
+++ b/.github/workflows/validate-cask.yaml
@@ -24,6 +24,22 @@ jobs:
       - uses: actions/checkout@v4
         if: inputs.ref == ''
 
+      - name: Validate cask file
+        run: |
+          CASK_FILE="Casks/kunobi.rb"
+
+          # Syntax check
+          ruby -c "$CASK_FILE"
+
+          # Required fields check
+          for field in version sha256 url name desc homepage app; do
+            if ! grep -qE "^\s*${field}\s" "$CASK_FILE"; then
+              echo "❌ Missing required field: $field"
+              exit 1
+            fi
+          done
+          echo "✅ Cask structure valid"
+
       - name: Extract version, URL, and SHA256 from cask
         id: cask
         run: |
