--- a/.github/workflows/validate-cask.yaml
+++ b/.github/workflows/validate-cask.yaml
@@ -17,12 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        if: inputs.ref != ''
         with:
-          ref: ${{ inputs.ref }}
-
-      - uses: actions/checkout@v4
-        if: inputs.ref == ''
+          ref: ${{ inputs.ref || github.ref }}
 
       - name: Validate cask file
         run: |
