--- a/.github/workflows/update-cask.yaml
+++ b/.github/workflows/update-cask.yaml
@@ -90,6 +90,27 @@ jobs:
     with:
       ref: ${{ needs.update-cask.outputs.branch }}
 
+  # Cleanup: delete branch if validation failed
+  cleanup:
+    needs: [update-cask, validate]
+    if: >-
+      always()
+      && needs.validate.result == 'failure'
+      && needs.update-cask.outputs.branch != ''
+      && needs.update-cask.outputs.branch != 'main'
+      && needs.update-cask.outputs.branch != 'master'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Delete failed branch
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: ${{ needs.update-cask.outputs.branch }}
+        run: |
+          gh api -X DELETE "repos/$GITHUB_REPOSITORY/git/refs/heads/$BRANCH" || true
+          echo "🧹 Deleted branch $BRANCH after failed validation"
+
   # Step 3: Create PR only if validation passes
   create-pr:
     needs: [update-cask, validate]
